<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:cardBackgroundColor="#FFF6E9"
        app:cardElevation="3dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <ImageView
                android:id="@+id/cancel"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_baseline_cancel_24"
                android:layout_gravity="right"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/open_sans_semibold"
                android:textAllCaps="true"
                android:layout_gravity="center"
                android:text="Toss prediction terms &amp; Conditions"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:background="@color/black"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_1"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:justificationMode="inter_word"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_2"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_3"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_4"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_5"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_6"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
                android:layout_marginTop="5dp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>