<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BottomNavigation.HowToPlay"
    android:orientation="vertical"
    android:background="@color/white">
    <androidx.appcompat.widget.Toolbar
        android:gravity="center_vertical"
        android:id="@+id/toolbarabout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_strip"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="How to play"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/open_sans"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:videoId="dYFG8mOoYfY"
                app:autoPlay="false"
                app:showFullScreenButton="true"
                android:id="@+id/yplayer"
                android:layout_margin="10dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#EFEFEF">
                <androidx.cardview.widget.CardView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:cardCornerRadius="12.5dp"
                    app:cardBackgroundColor="@color/colorEnd"
                    app:cardElevation="1dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/open_sans"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Select an upcoming match"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/open_sans"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_select_a_match_from_the"
                android:layout_margin="10dp"
                android:fontFamily="@font/open_sans_light"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="start"/>
                <LinearLayout
                    android:layout_width="180dp"
                    android:layout_height="360dp"
                    android:layout_margin="10dp"
                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/mobile_screen_one"
                        android:scaleType="fitXY"/>
                </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#EFEFEF">
                <androidx.cardview.widget.CardView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:cardCornerRadius="12.5dp"
                    app:cardBackgroundColor="@color/colorEnd"
                    app:cardElevation="1dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/open_sans"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create your team"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/open_sans"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_team"
                android:layout_margin="10dp"
                android:fontFamily="@font/open_sans_light"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="start"/>
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="360dp"
                android:layout_margin="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/mobile_screen_two"
                    android:scaleType="fitXY"/>
            </LinearLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#EFEFEF">
                <androidx.cardview.widget.CardView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    app:cardCornerRadius="12.5dp"
                    app:cardBackgroundColor="@color/colorEnd"
                    app:cardElevation="1dp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:fontFamily="@font/open_sans"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Join a league"
                    android:layout_gravity="center|start"
                    android:layout_marginStart="40dp"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/open_sans"/>
            </FrameLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/join_league"
                android:layout_margin="10dp"
                android:fontFamily="@font/open_sans_light"
                android:textSize="13sp"
                android:textColor="@color/black"
                android:gravity="start"/>
            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="360dp"
                android:layout_margin="10dp"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/mobile_screen_three"
                    android:scaleType="fitXY"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>



</LinearLayout>