<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BottomNavigation.FAQ"
    android:background="@color/white"
    android:orientation="vertical">
    <androidx.appcompat.widget.Toolbar
        android:gravity="center_vertical"
        android:id="@+id/toolbarabout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/top_strip"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24_white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FAQs"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/open_sans"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/profile_bck_img"
                android:orientation="horizontal">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="60dp"
                android:src="@drawable/faq_img_icon"
                android:layout_gravity="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Questions? We've got\ninstant answers."
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:fontFamily="@font/open_sans_semibold"/>

            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#F8F8F8"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="12.5dp"
                            app:cardBackgroundColor="@color/colorEnd"
                            app:cardElevation="1dp"
                            android:layout_margin="5dp"
                            android:layout_gravity="center|start">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="1"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:fontFamily="@font/open_sans"
                                android:layout_gravity="center"/>
                        </androidx.cardview.widget.CardView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="How does MYINDIA11 work?"
                            android:layout_gravity="center|start"
                            android:layout_marginStart="40dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:fontFamily="@font/open_sans"/>
                        <ImageView
                            android:id="@+id/downkey1"
                            android:visibility="visible"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center|end"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>
                        <ImageView
                            android:id="@+id/upkey1"
                            android:visibility="gone"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center|end"
                            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"/>

                    </FrameLayout>
                    <LinearLayout
                        android:id="@+id/faq1layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/faq1"
                            android:justificationMode="inter_word"
                            android:textSize="12sp"
                            android:fontFamily="@font/open_sans_light"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#F8F8F8"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="12.5dp"
                            app:cardBackgroundColor="@color/colorEnd"
                            app:cardElevation="1dp"
                            android:layout_margin="5dp"
                            android:layout_gravity="center|start">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="2"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:fontFamily="@font/open_sans"
                                android:layout_gravity="center"/>
                        </androidx.cardview.widget.CardView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Can I actually win money on MYINDIA11?"
                            android:layout_gravity="center|start"
                            android:layout_marginStart="40dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:fontFamily="@font/open_sans"/>
                        <ImageView
                            android:id="@+id/downkey2"
                            android:visibility="visible"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center|end"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>
                        <ImageView
                            android:id="@+id/upkey2"
                            android:visibility="gone"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center|end"
                            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"/>

                    </FrameLayout>
                    <LinearLayout
                        android:id="@+id/faq2layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/faq2"
                            android:justificationMode="inter_word"
                            android:textSize="12sp"
                            android:fontFamily="@font/open_sans_light"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="#F8F8F8"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <androidx.cardview.widget.CardView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            app:cardCornerRadius="12.5dp"
                            app:cardBackgroundColor="@color/colorEnd"
                            app:cardElevation="1dp"
                            android:layout_margin="5dp"
                            android:layout_gravity="center|start">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="3"
                                android:textColor="@color/white"
                                android:textSize="12sp"
                                android:fontFamily="@font/open_sans"
                                android:layout_gravity="center"/>
                        </androidx.cardview.widget.CardView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Is it safe to add money to wallet?"
                            android:layout_gravity="center|start"
                            android:layout_marginStart="40dp"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:fontFamily="@font/open_sans"/>
                        <ImageView
                            android:id="@+id/downkey3"
                            android:visibility="visible"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center|end"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"/>
                        <ImageView
                            android:id="@+id/upkey3"
                            android:visibility="gone"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center|end"
                            android:src="@drawable/ic_baseline_keyboard_arrow_up_24"/>

                    </FrameLayout>
                    <LinearLayout
                        android:id="@+id/faq3layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/faq3"
                            android:justificationMode="inter_word"
                            android:textSize="12sp"
                            android:fontFamily="@font/open_sans_light"
                            android:textColor="@color/black"
                            android:layout_marginTop="5dp"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>